all working except live-reloading on save

--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html ng-app='astonishingOwls'>
   <head>
-    <link rel="stylesheet" type="text/css" href="styles/styles.css" />
+    <link rel="stylesheet" type="text/css" href="styles/style.css" />
   </head>
   <body>
     <h1>AstonishingOwls</h1>
+    <div><li>Testing Purpose</li></div>
+    <div><li>Testing Purpose2</li></div>
 
 
     <div ng-view></div>
