fix(sass); fixed the gulp file

--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app='astonishingOwls'>
   <head>
-    <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
     <h1>AstonishingOwls</h1>
