Chore(styling): built layout of folders in scss and added firebase script

--- a/client/index.html
+++ b/client/index.html
@@ -2,13 +2,11 @@
 <html ng-app='astonishingOwls'>
   <head>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <script src="https://www.gstatic.com/firebasejs/3.5.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.5.0/firebase-auth.js"></script>
   </head>
   <body>
     <h1>AstonishingOwls</h1>
-    <div><li>Testing Purpose</li></div>
-    <div><li>Testing Purpose2</li></div>
-
-
     <div ng-view></div>
 
     <script src="lib/angular/angular.js"></script>
@@ -17,6 +15,20 @@
     <script src="lib/angular-mocks/angular-mocks.js"></script>
     <script src="lib/angular-aria/angular-aria.js"></script>
     <script src="lib/angular-material/angular-material.js"></script>
+
+
+    <script src="https://www.gstatic.com/firebasejs/3.5.0/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyBQXqpnL8kiLpbbi8nNb5UHEi3OvDKWOv4",
+        authDomain: "astonishingowls.firebaseapp.com",
+        databaseURL: "https://astonishingowls.firebaseio.com",
+        storageBucket: "astonishingowls.appspot.com",
+        messagingSenderId: "1084860296809"
+      };
+      firebase.initializeApp(config);
+    </script>
 
     <script src="app/factory_functions/factory.js"></script>
     <script src="app/app.js"></script>
