--- a/client/app/auth/register.html
+++ b/client/app/auth/register.html
@@ -14,4 +14,7 @@
             <button type="submit" class="btn btn-default" ng-disabled="disabled">Register</button>
         </div>
     </form>
+
+    <a type="button" class="btn btn-default" ng-disabled="disabled" href="#/login">Log In</a>
+
 </div>
