--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
-    <h1>AstonishingOwls</h1>
+    <!--<h1>AstonishingOwls</h1>-->
     <div ng-view></div>
 
     <script src="//code.jquery.com/jquery-2.2.1.min.js"></script>
