--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,8 @@
 <html ng-app='astonishingOwls'>
   <head>
     <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.6/yeti/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link rel="stylesheet" href="lib/font-awesome-animation/src/font-awesome-animation.css">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
@@ -10,6 +12,7 @@
 
     <script src="//code.jquery.com/jquery-2.2.1.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="https://use.fontawesome.com/cc26c64e03.js"></script>
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
     <script src="lib/angular-animate/angular-animate.js"></script>
