fix(logout_button): needed to change span to div

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -9,10 +9,11 @@
       <div class="logo">
         <img src="../../assets/logo.png"/>
       </div>
-      <div class="logout">
-        <span ng-controller="logoutController"></span>
+
+      <div ng-controller="logoutController" class="logout">
         <a ng-click='logout()' class="btn btn-default">Logout</a>
       </div>
+
     </header>
 
     <div class="savedSearches col-xs-12 col-md-8">
