--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -51,6 +51,7 @@
             <button class="btn btn-default"  type='submit'>Submit</button>
           </div>
         </form>
+        <button ng-click="postToDB()">Save!!!!!</button>
     </div>
 
     <footer class="footer col-xs-12">
