--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -16,26 +16,15 @@
 
     </header>
 
-    <div class="savedSearches col-xs-12 col-md-8">
-      <div class="search col-xs-12 col-md-6">
-        <div class="box">
+    <div ng-controller="dashboardView" class="savedSearches col-xs-12 col-md-8">
+      <button ng-click="update()">Update Data!</button>
+     <!--  <div ng-repeat="something in something" class="col-xs-12">
+        <div class="search col-xs-12 col-md-6">
+          <div class="box"> {{ something }}
+          </div>
         </div>
-      </div>
-
-      <div class="search col-xs-12 col-md-6">
-        <div class="box">
-        </div>
-      </div>
-
-      <div class="search col-xs-12 col-md-6">
-        <div class="box">
-        </div>
-      </div>
-
-      <div class="search col-xs-12 col-md-6">
-        <div class="box">
-        </div>
-      </div>
+      </div> -->
+      {{ manipulateData }}
     </div>
 
     <div class="userSearch col-xs-12 col-md-4">
@@ -51,7 +40,7 @@
             <button class="btn btn-default"  type='submit'>Submit</button>
           </div>
         </form>
-        <button ng-click="postToDB()">Save!!!!!</button>
+        <button ng-click="postToDB()">BUY BUY BUY!!!!!</button>
     </div>
 
     <footer class="footer col-xs-12">
