added to each of the saved currencies a now value

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -28,6 +28,7 @@
               <li>Currency: {{ item.cxy }}</li>
               <li>Date bought: {{ item.date }}</li>
               <li>Purchase value: {{ item.value }}</li>
+              <li>Current value: {{ item.refreshed }}</li>
             </ul>
           </div>
         </div>
