fix(favicon, mixin): added mixins, favicon and removed extra asset

--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html ng-app='astonishingOwls'>
   <head>
+    <meta charset="utf-8">
+    <title>Astonishing Owls</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.6/yeti/bootstrap.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="lib/font-awesome-animation/src/font-awesome-animation.css">
