--- a/client/app/auth/login.html
+++ b/client/app/auth/login.html
@@ -1,4 +1,4 @@
-<div class="col-md-4">
+<div id="login" class="col-xs-12 col-md-4">
     <h1>Login</h1>
     <div ng-show="error" class="alert alert-danger">{{errorMessage}}</div>
     <form class="form" ng-submit="login()">
@@ -15,6 +15,4 @@
         </div>
     </form>
     <a type="button" class="btn btn-default" ng-disabled="disabled" href="#/register">Register</a>
-
-
 </div>
