--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -52,6 +52,12 @@
           </div>
         </div>
       </div>
+
+      <canvas id="base" class="chart-bar"
+        chart-data="data" chart-labels="labels" chart-colors="colors" chart-options="options"
+        chart-series="series" chart-dataset-override="datasetOverride" >
+      </canvas> 
+
     </div>
 
 
