added pie chart

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -58,6 +58,10 @@
         chart-series="series" chart-dataset-override="datasetOverride" >
       </canvas> 
 
+      <canvas id="pie" class="chart chart-doughnut"
+        chart-data="marketValues" chart-labels="labels" chart-options="optionsPie"
+      </canvas> 
+
     </div>
 
 
