--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,7 @@
     <script src="lib/angular-mocks/angular-mocks.js"></script>
     <script src="lib/angular-aria/angular-aria.js"></script>
     <script src="lib/angular-material/angular-material.js"></script>
-    <script src="lib/chart.js/dist/Chart.min.js"></script>
+    <script src="assets/Chart.min.js"></script>
     <script src="//cdn.jsdelivr.net/angular.chartjs/latest/angular-chart.min.js"></script>
 
     <script src="app/dashboard/dashboard.js"></script>
