--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -47,17 +47,23 @@
       </div>
 
       <div class="chart-section col-xs-12 col-md-6">
+
+        <h4 ng-show="data.length > 1">Comparative analytics: position holdings and gain / loss summary</h4>
         <div class="chart col-xs-12">
           <canvas id="base" class="chart-bar"
                   chart-data="data" chart-labels="labels" chart-colors="colors" chart-options="options"
                   chart-series="series" chart-dataset-override="datasetOverride">
           </canvas>
         </div>
+
+        <h4 ng-show="data.length > 1">Portfolio summary</h4>
         <div class="chart col-xs-12">
           <canvas id="pie" class="chart chart-doughnut"
-                  chart-data="marketValues" chart-labels="labels" chart-options="optionsPie"
+                  chart-data="marketValues" chart-labels="labels"  chart-legend="true"
+                  chart-colors="colors" chart-options="optionsPie">
           </canvas>
         </div>
+
       </div>
 
     </div>
@@ -87,7 +93,6 @@
           <div ng-hide="historyRate.buttonShow">
             <p>How much would you want to buy? (Amounts in USD)</p>
             <input type="number" ng-model="boughtAmount">
-            <!--<p> {{ boughtAmount }} </p>-->
             <a class="btn btn-default" ng-click="postToDB(); historyRate.ratesLoaded = !historyRate.ratesLoaded">Confirm
               purchase</a>
           </div>
