--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -21,7 +21,7 @@
       <div class="top-section col-xs-12">
         <h1 class="title">Saved Searches</h1>
         <a ng-click="update()" class="btn btn-default">Update Position!</a>
-        <a href="#newSearch" class="btn btn-default">New Search</a>
+        <!--<a ng-click="scrollTo('newSearch')" class="btn btn-default">New Search</a>-->
       </div>
       <div class="myContainer col-xs-12 col-md-6">
         <div ng-repeat="item in manipulateData" class="largerContainer col-xs-12 col-md-6">
