added legend to pie graph

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -50,12 +50,12 @@
         <div class="chart col-xs-12">
           <canvas id="base" class="chart-bar"
                   chart-data="data" chart-labels="labels" chart-colors="colors" chart-options="options"
-                  chart-series="series" chart-dataset-override="datasetOverride">
+                  chart-series="series" chart-dataset-override="datasetOverride" chart-legend="true">
           </canvas>
         </div>
         <div class="chart col-xs-12">
           <canvas id="pie" class="chart chart-doughnut"
-                  chart-data="marketValues" chart-labels="labels" chart-options="optionsPie"
+                  chart-data="marketValues" chart-labels="labels" chart-options="optionsPie" chart-legend="true">
           </canvas>
         </div>
       </div>
