--- a/client/app/auth/register.html
+++ b/client/app/auth/register.html
@@ -1,3 +1,20 @@
+<header class="navigation col-xs-12">
+  <div class="logo">
+    <img src="../../assets/logo.png"/>
+    <p class="title">Astonishing Owls</p>
+  </div>
+
+  <div class="logout">
+    <a ng-disabled="disabled" href="#/register">Register</a>
+    <a ng-disabled="disabled" href="#/login">Login</a>
+  </div>
+
+</header>
+
+<div >
+  <img class="loginwall" src="../../assets/loginWall.jpg"/>
+</div>
+
 <div id="login" class="col-xs-12 col-md-4">
     <h1>Register</h1>
     <div ng-show="error" class="alert alert-danger">{{errorMessage}}</div>
