--- a/client/app/auth/login.html
+++ b/client/app/auth/login.html
@@ -1,18 +1,39 @@
-<div id="login" class="col-xs-12 col-md-4">
-    <h1>Login</h1>
-    <div ng-show="error" class="alert alert-danger">{{errorMessage}}</div>
-    <form class="form" ng-submit="login()">
-        <div class="form-group">
-            <label>Username</label>
-            <input type="text" class="form-control" name="username" ng-model="loginForm.username" required>
+
+    <header class="navigation col-xs-12">
+        <div class="logo">
+            <img src="../../assets/logo.png"/>
+            <p class="title">Astonishing Owls</p>
         </div>
-        <div class="form-group">
-            <label>Password</label>
-            <input type="password" class="form-control" name="password" ng-model="loginForm.password" required>
+        <div class="switchPage">
+            <a class="btn btn-default" ng-disabled="disabled" href="#/register">Register</a>
         </div>
-        <div>
-            <button type="submit" class="btn btn-default" ng-disabled="disabled">Login</button>
+    </header>
+
+    <div class="login_body col-xs-12">
+        <div id="login" class="col-xs-12 col-md-6">
+            <div class="tagline col-xs-12">
+                <h3>We're the Astonishing Owls. Bringing the power of FX to your fingertips</h3>
+            </div>
+            <h1>Login</h1>
+            <div ng-show="error" class="alert alert-danger">{{errorMessage}}</div>
+            <form class="form" ng-submit="login()">
+                <div class="form-group">
+                    <label>Username</label>
+                    <input type="text" class="form-control" name="username" ng-model="loginForm.username" required>
+                </div>
+                <div class="form-group">
+                    <label>Password</label>
+                    <input type="password" class="form-control" name="password" ng-model="loginForm.password" required>
+                </div>
+                <div>
+                    <button type="submit" class="btn btn-default" ng-disabled="disabled">Login</button>
+                </div>
+            </form>
         </div>
-    </form>
-    <a class="btn btn-default" ng-disabled="disabled" href="#/register">Register</a>
-</div>
+    </div>
+
+
+    <footer class="footer col-xs-12">
+        <p>Made with by <i class="fa fa-heart faa-pulse animated" aria-hidden="true"></i> Astonishing Owls Inc. </p>
+    </footer>
+
