Another favicon attempt

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
     <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.6/yeti/bootstrap.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="lib/font-awesome-animation/src/font-awesome-animation.css">
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
