Code cleanup and documentation

--- a/client/app/auth/register.html
+++ b/client/app/auth/register.html
@@ -32,5 +32,5 @@
 </div>
 
 <footer class="footer col-xs-12">
-    <p>Made with by <i class="fa fa-heart faa-pulse animated" aria-hidden="true"></i> Astonishing Owls Inc. </p>
+    <p>Made with <i class="fa fa-heart faa-pulse animated" aria-hidden="true"></i> by Astonishing Owls Inc. </p>
 </footer>
