--- a/client/app/auth/login.html
+++ b/client/app/auth/login.html
@@ -33,6 +33,6 @@
 
 
     <footer class="footer col-xs-12">
-        <p>Made with by <i class="fa fa-heart faa-pulse animated" aria-hidden="true"></i> Astonishing Owls Inc. </p>
+        <p>Made with <i class="fa fa-heart faa-pulse animated" aria-hidden="true"></i> by Astonishing Owls Inc. </p>
     </footer>
 
