--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,7 @@
     <script src="assets/Chart.min.js"></script>
     <script src="//cdn.jsdelivr.net/angular.chartjs/latest/angular-chart.min.js"></script>
 
+    <script src="app/export/export.js"></script>
     <script src="app/dashboard/dashboard.js"></script>
     <script src="app/auth/controllers.js"></script>
     <script src="app/factory_functions/factory.js"></script>
