working on google oauth

--- a/client/app/auth/login.html
+++ b/client/app/auth/login.html
@@ -28,6 +28,7 @@
                     <button type="submit" class="btn btn-default" ng-disabled="disabled">Login</button>
                 </div>
             </form>
+            <a class="btn btn-default" href="/auth/google">Sign In with Google</a>
         </div>
     </div>
 
@@ -35,4 +36,3 @@
     <footer class="footer col-xs-12">
         <p>Made with <i class="fa fa-heart faa-pulse animated" aria-hidden="true"></i> by Astonishing Owls Inc. </p>
     </footer>
-
