--- a/client/app/export/export.html
+++ b/client/app/export/export.html
@@ -9,15 +9,10 @@
   </header>
 
   <div ng-controller="exportController" class="Chart col-xs-12">
-      <div  class="col-xs-12 col-md-6">
+      <!-- <div  class="col-xs-12 col-md-6"> -->
         <h3>Chart</h3>
-        <div ng-repeat="item in dbData" class="largerContainer col-xs-12 col-md-6">
-
-                <div class="col-md-4">
-                   {{item}}
-                </div>
-          </div>
-      </div>
+          <div id="grid1" ui-grid="options" ui-grid-selection ui-grid-exporter class="grid"></div>
+      <!-- </div> -->
   </div>
 
 
