export chart dependency added

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="lib/font-awesome-animation/src/font-awesome-animation.css">
     <link rel="shortcut icon" href="assets/myfav.ico" type="image/x-icon"/>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="lib/angular-ui-grid/ui-grid.min.css">
   </head>
   <body>
     <!--<h1>AstonishingOwls</h1>-->
@@ -24,6 +25,9 @@
     <script src="lib/angular-mocks/angular-mocks.js"></script>
     <script src="assets/Chart.min.js"></script>
     <script src="//cdn.jsdelivr.net/angular.chartjs/latest/angular-chart.min.js"></script>
+
+    <script src="lib/angular-ui-grid/ui-grid.min.js"></script>
+    <script src="lib/pdfmake/build/pdfmake.min.js"></script>
 
     <script src="app/export/export.js"></script>
     <script src="app/dashboard/dashboard.js"></script>
