--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,8 @@
     <script src="//cdn.jsdelivr.net/angular.chartjs/latest/angular-chart.min.js"></script>
 
     <script src="lib/angular-ui-grid/ui-grid.min.js"></script>
-    <script src="lib/pdfmake/build/pdfmake.min.js"></script>
+    <script src="lib/pdfmake/build/pdfmake.js"></script>
+    <script src="lib/pdfmake/build/vfs_fonts.js"></script>
 
     <script src="app/export/export.js"></script>
     <script src="app/dashboard/dashboard.js"></script>
